Clean Code - Stream.collect -> Stream.toList